// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaskedInput - basic functionality: After gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: After gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: Before gets correct error prop 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": true,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: Before gets correct props 1`] = `
Object {
  "$adjoined": "none",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
}
`;

exports[`MaskedInput - basic functionality: Masked input has correct props 1`] = `
Object {
  "aria-describedby": null,
  "aria-invalid": false,
  "aria-label": null,
  "aria-labelledby": null,
  "aria-required": false,
  "autoComplete": "on",
  "autoFocus": false,
  "id": undefined,
  "name": "",
  "onBlur": [Function],
  "onChange": [Function],
  "onFocus": [Function],
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "onMouseDown": [Function],
  "onPaste": [Function],
  "overrides": Object {
    "After": [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "$adjoined": "none",
            "$disabled": false,
            "$error": false,
            "$isFocused": false,
            "$required": false,
            "$size": "default",
          },
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <span />,
        },
      ],
    },
    "Before": [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "$adjoined": "none",
            "$disabled": false,
            "$error": false,
            "$isFocused": false,
            "$required": false,
            "$size": "default",
          },
          Object {},
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": <span />,
        },
      ],
    },
  },
  "placeholder": "Placeholder",
  "required": false,
  "size": "default",
  "styled-component": "true",
  "type": "text",
}
`;
